2024/kubernetes_manifests/app/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: engineering-training-app
spec:
  selector:
    matchLabels:
      app: engineering-training-app
  template:
    metadata:
      labels:
        securityGroupPolicy: engineering-training
      annotations:
        sidecar.istio.io/inject: "false"
    spec:
      containers:
        - name: engineering-training-app
          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 3000
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              memory: 512Mi
