2024/kubernetes_manifests/app/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: engineering-training-app
spec:
  selector:
    app: engineering-training-app
  ports:
    - name: http
      port: 80
      targetPort: 8080
